- increased timeout on servicecheck ajax calls

--- a/Waiter/views/admin/connect.twig
+++ b/Waiter/views/admin/connect.twig
@@ -20,6 +20,7 @@
                 var ServiceAjaxCall = {
                     type: "post",
                     dataType: "json",
+                    timeout: 15000,
                     context: this,
                     url: ajaxurl,
                     data: {
