- Fixes to new property logic

--- a/Waiter/views/admin/property.twig
+++ b/Waiter/views/admin/property.twig
@@ -147,6 +147,13 @@
                                 <div id="examples-{{ property.id }}">
 
                                 </div>
+                                <div>
+                                    <p>
+                                        The destinations are used by us to create relevant and interesting post topics like "My favourite bar <b>in Barcelona</b>".
+                                        Think of words you would use to search for things to do in your area, for instance "My favourite bar <b>near Las Ramblas</b>".
+                                        You can come back to this tab anytime to change it.
+                                    </p>
+                                </div>
                             </div>
                             <div class="col-sm-6 col-xs-12">
                                 <div class="field">
@@ -190,7 +197,7 @@
                             <div id="title" class="col-sm-12">
                                 <h1>Information</h1>
                             </div>
-                            <p>We will ask you more property details in a future release before Vacation Soup is launched. </p>
+                            <p>To advertise your property on Vacation Soup and bring travellers to your website you need to become a member. See the <a href="https://vacationsoup.com/owners-area/">owner's area</a> for more details.</p>
                         </div>
                     </div>
                     {% endif %}
