--- a/Waiter/views/tease-post.twig
+++ b/Waiter/views/tease-post.twig
@@ -13,7 +13,7 @@
     </div>
     <div class="col-xl-8 col-lg-12 col-sm-8">
         <h4 class="h2">
-            <span class="align-left">{{post.title}}</span>
+            <span class="align-left recent_post_title">{{post.title}}</span>
         </h4>
         <p class="align-left">{{ post.get_preview(30) }}
         <span class="align-right">
