--- a/Waiter/views/admin/post-form.twig
+++ b/Waiter/views/admin/post-form.twig
@@ -2,9 +2,9 @@
 {% block form_name %}post{% endblock form_name %}
 {% block form_header %}
     <input type="hidden" id="post_author" name="post_author" value="{{ user.id }}">
-    <input type="hidden" id="featured_image" name="featured_image">
-    <input type="hidden" id="topic" name="topic">
-    <input type="hidden" id="post_status" name="post_status" value="publish">
-    <input type="hidden" id="post_date" name="post_date" value="">
-    <input type="hidden" id="post_type" name="post_type" value="post">
+    <input type="hidden" id="featured_image" name="featured_image" value="{{ new_post.featured_image }}">
+    <input type="hidden" id="topic" name="topic" value="{{ new_post.topic }}">
+    <input type="hidden" id="post_status" name="post_status" value="{{ new_post.post_status }}">
+    <input type="hidden" id="post_date" name="post_date" value="{{ new_post.post_date }}">
+    <input type="hidden" id="post_type" name="post_type" value="{{ new_post.post_type }}">
 {% endblock form_header %}
