--- a/css/vs-admin.css
+++ b/css/vs-admin.css
@@ -38,6 +38,13 @@
     padding-right: 10px;
 }
 
+#main_panel.vs-panel {
+    min-height: 1320px;
+}
+#tagger IMG {
+    width: 100%;
+}
+
 ARTICLE.tease {
     padding-bottom: 2px;
     padding-top: 2px;
@@ -157,6 +164,10 @@ DIV.media-selector {
 .checklist-item INPUT[type="checkbox"],
 .checklist-item INPUT[type="radio"] {
     margin: 0 5px 0 0;
+    float: left;
+}
+.checklist-item LABEL {
+    /* float: right; */
 }
 
 .tags-container .checklist-item {
@@ -182,7 +193,10 @@ DIV.media-selector {
     width: 100px;
     display: block;
     clear: left;
-    margin: 10px 0;
+    margin: 5px 20px 10px 0;
+}
+#scheduler #draft, #preview {
+    display: inline-block !important;
 }
 
 DIV.field LABEL{
@@ -449,7 +463,7 @@ DIV.field-container.currently-editing  INPUT
 .servicecheck.fail I {
     color: rgba(255, 0, 0, 1.0) !important;
 }
-#alter-destination {
+#title SELECT {
     font-size: inherit;
     height: inherit;
     background: inherit;
