--- a/Waiter/views/admin/create.twig
+++ b/Waiter/views/admin/create.twig
@@ -13,14 +13,22 @@
     var motdClicked = false;
     var checkedTag='';
 
-    var doAutosave = function(){
+    var autosaveRedirect = null;
+    var doAutosave = function(redirect){
+        if (redirect) {
+            autosaveRedirect = redirect;
+        }
         jQuery('INPUT[type=submit]').prop('disabled',true);
+        tinyMCE.triggerSave();
         jQuery.post( ajaxurl+'?action=soup_create',
             jQuery('FORM.tab-create').serialize(),
             function(data) {
                 jQuery('INPUT[type=submit]').prop('disabled',false);
                 if (data.success) {
                     jQuery('INPUT[name=post_id]').val(data.ID);
+                    if (autosaveRedirect) {
+                        window.location.search = autosaveRedirect;
+                    }
                 } else {
                     jQuery('#publish').append('<div class="error">Autosave failed</div>');
                 }
@@ -457,7 +465,7 @@
             jQuery.post(ajaxurl,
                 args,
                 function(data) {
-                    window.location.reload();
+                    window.location.href = "?page=vacation-soup-admin&tab=create";
                 },
                 'json' // I expect a JSON response
             );
@@ -495,7 +503,38 @@
 
     </script>
 <style>
-    .notice { display: none; }
+    .mag-tag {
+        margin-bottom: 10px;
+    }
+    .notice { display: none; } /* Hide system notices */
+    .tease-post I.fa {
+        font-size: 2em;
+        color: white;
+        position: absolute;
+        top: 4px;
+        width: inherit;
+        padding: 6px;
+        border-radius: 2px;
+        background: rgba(0,0,0,0.2);
+    }
+    .tease-post .fa:hover {
+        color: #f08237;
+        background: rgba(0,0,0,0.9);
+        transition: all 0.15s ease-in;
+    }
+    .tease-post I.fa.fa-edit {
+        left: 19px;
+    }
+    .tease-post I.fa.fa-eye {
+        right: 4px;
+        top: 4px;
+    }
+    #post-lister-content.to-do-when-designed {
+        height: 700px;
+        overflow: scroll;
+        margin: 0;
+        padding: 0;
+    }
 </style>
 {% embed 'admin/post-form.twig' %}{% block form_content %}
     <input type="hidden" id="latitude" name="latitude" value="{{ new_post.latitude }}">
@@ -507,7 +546,8 @@
     <div class="col-xs-12 col-sm-6 col-lg-8">
         <div id="main_panel" class="vs-panel row">
             <div id="title" class="col-sm-12">
-                <h1>Create Post
+                {% set action = (new_post.edit_mode == 'edit')?'Edit':'Create'  %}
+                <h1>{{ action }} Post
                     <select title="Alternative destinations" id="alter-destination">
                         {% for dest in soup.destinations %}
                             <option value="{{ dest.id }}" {{ (dest.id == soup.current_destination)?'selected':'' }}>
@@ -517,7 +557,7 @@
                     </select>
                     {% if new_post.edit_mode == 'edit' %}
                     <select title="Create or Edit" id="create-or-edit" name="create-or-edit">
-                        <option value="edit" selected>using draft</option>
+                        <option value="edit" selected>using {{ (new_post.post_status == 'publish')?'published':'draft'}}</option>
                         <option value="create" >from new</option>
                     </select>
                     {% endif %}
@@ -550,49 +590,49 @@
             <div id="tagger" class="col-lg-8 col-sm-12">
                 <h2>Tags</h2>
                 <div class="col-sm-12 row">
-                    <div class="col-sm-3">
+                    <div class="col-sm-3 mag-tag">
                         <img src="{{ soup.image_url }}/whatson-100.jpeg"
                              title="WhatsOn"
                              alt="WhatsOn Travel Guide">
                         <span class="checklist-item"><label for="tag_a">WhatsOn</label><input type="checkbox" class="tag" name="tags[]" id="tag_a" value="whatson" title="WhatsOn" {{  ('whatson' in new_post.tags)?'checked' }}></span>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-3 mag-tag">
                         <img src="{{ soup.image_url }}/whattodo-100.jpeg"
                              title="WhatToDo"
                              alt="WhatToDo Travel Guide">
                         <span class="checklist-item"><label for="tag_b">WhatToDo</label><input type="checkbox" class="tag" name="tags[]" id="tag_b" value="whattodo" title="WhatToDo" {{  ('whattodo' in new_post.tags)?'checked' }}></span>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-3 mag-tag">
                         <img src="{{ soup.image_url }}/whattosee-100.jpg"
                              title="WhatToSee"
                              alt="WhatToSee Travel Guide">
                         <span class="checklist-item"><label for="tag_c">WhatToSee</label><input type="checkbox" class="tag" name="tags[]" id="tag_c" value="whattosee" title="WhatToSee" {{  ('whattosee' in new_post.tags)?'checked' }}></span>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-3 mag-tag">
                         <img src="{{ soup.image_url }}/beaches-100.jpg"
                              title="Beaches"
                              alt="Beaches Travel Guide">
                         <span class="checklist-item"><label for="tag_d">Beaches</label><input type="checkbox" class="tag" name="tags[]" id="tag_d" value="beaches" title="Beaches" {{  ('beaches' in new_post.tags)?'checked' }}></span>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-3 mag-tag">
                         <img src="{{ soup.image_url }}/foodie-100.jpg"
                              title="Foodie"
                              alt="Foodie Travel Guide">
                         <span class="checklist-item"><label for="tag_e">Foodie</label><input type="checkbox" class="tag" name="tags[]" id="tag_e" value="foodie" title="Foodie" {{  ('foodie' in new_post.tags)?'checked' }}></span>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-3 mag-tag">
                         <img src="{{ soup.image_url }}/cycling-100.jpg"
                              title="Cycling"
                              alt="Cycling Travel Guide">
                         <span class="checklist-item"><label for="tag_f">Cycling</label><input type="checkbox" class="tag" name="tags[]" id="tag_f" value="cycling" title="Cycling" {{  ('cycling' in new_post.tags)?'checked' }}></span>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-3 mag-tag">
                         <img src="{{ soup.image_url }}/hikers-100.jpg"
                              title="Hikers"
                              alt="Hikers Travel Guide">
                         <span class="checklist-item"><label for="tag_g">Hikers</label><input type="checkbox" class="tag" name="tags[]" id="tag_g" value="hikers" title="Hikers" {{  ('hikers' in new_post.tags)?'checked' }}></span>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-3 mag-tag">
                         <img src="{{ soup.image_url }}/golf-100.jpg"
                              title="Golf"
                              alt="Golf Travel Guide">
@@ -662,13 +702,15 @@
         <div class="vs-panel row">
             <div id="post-lister" class="col-sm-12">
                 <h1>Your recent posts</h1>
-                <ul>
-                    {% for post in posts %}
-                        {% include "tease-post.twig" %}
-                    {% else %}
-                        <li>No posts available</li>
-                    {% endfor %}
-                </ul>
+                <div id="post-lister-content">
+                    <ul>
+                        {% for post in posts %}
+                            {% include "tease-post.twig" %}
+                        {% else %}
+                            <li>No posts available</li>
+                        {% endfor %}
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
