--- a/Waiter/views/tease-post.twig
+++ b/Waiter/views/tease-post.twig
@@ -10,12 +10,14 @@
         {% else %}
             <img src="{{ soup.image_url }}/placeholder-square.jpg"/>
         {% endif %}
+        <div onclick='doAutosave("?page=vacation-soup-admin&tab=create&p="+{{ post.ID }});' title="Edit"><i class="dismiss fa fa-edit"></i></div>
+        <a href="{{ fn('get_home_url') }}?p={{ post.ID }}&preview=true" target="_blank" title="View (new tab)"><i class="dismiss fa fa-eye"></i></a>
     </div>
     <div class="col-xl-8 col-lg-12 col-sm-8">
         <h4 class="h2">
             <span class="align-left recent_post_title">{{post.title}}</span>
         </h4>
-        <p class="align-left">{{ post.get_preview(30) }}
+        <p class="align-left">{{ post.get_preview(30,true,'') }}
         <span class="align-right">
                 {{ post.status=='draft'? 'draft': post.date|time_ago }}
         </span></p>
