--- a/Waiter/views/admin/property.twig
+++ b/Waiter/views/admin/property.twig
@@ -160,7 +160,7 @@
                                     <label for="latitude-{{ property.id }}">
                                         Latitude <span class="required">*</span>
                                     </label>
-                                    <input type="number" step="any"
+                                    <input type="number" step="any"  min="-85" max="85"
                                            data-id="{{ property.id }}"
                                            class="persist handleChange"
                                            name="Property[{{ property.id }}].latitude"
@@ -172,7 +172,7 @@
                                     <label for="longitude-{{ property.id }}">
                                         Longitude <span class="required">*</span>
                                     </label>
-                                    <input type="number" step="any"
+                                    <input type="number" step="any" min="-180" max="180"
                                            data-id="{{ property.id }}"
                                            class="persist handleChange"
                                            name="Property[{{ property.id }}].longitude"
