- Corrected registration link - Warn if shortcode used in post - Added preview remote button on recent posts - Re-aligned preview_remote button for responsive

--- a/Waiter/views/admin/connect.twig
+++ b/Waiter/views/admin/connect.twig
@@ -142,7 +142,7 @@
         <div id="connect-params" class="vs-panel row field-container">
             <div id="title" class="col-sm-12">
                 <h1>The Soup Settings</h1>
-                <p>Please enter the username (email) and password you <a href="https://learn.vacationsoup.com/register" target="_blank">registered with Vacation Soup</a>. Once set, you cannot change your username. </p>
+                <p>Please enter the username (email) and password you <a href="https://vacationsoup.com/owners-area/#login" target="_blank">registered with Vacation Soup</a>. Once set, you cannot change your username. </p>
                 {% if admin.error_msg %}
                     <div id="error-message" class="error">{{ admin.error_msg }}</div>
                 {% endif %}
